welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:23: error: ';' expected but 'if' found.
} if (sortieTrouvee)
  ^